# shortsfarm

./: .gitignore  GUIDE.md  README.md  pyproject.toml  run  watch_20260627-212910
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: render-remotion.mjs
frontend/src/: App.tsx  api.ts  main.tsx  (+2 more)
shortfarm/: cli.py  config.py  db.py  migrations.py  mpv_session.py  publish_youtube.py  services.py  youtube_oauth.py
shortsfarm/: cli.py  config.py  db.py  edit_planner.py  edit_renderer.py  ffmpeg_tools.py  local_dialogs.py  migrations.py  mpv_session.py  prepare_video.py  publish_schedule.py  publish_youtube.py  remotion_renderer.py  render.py  render_profiles.py  services.py  studio.py  studio_service.py  studio_templates.py  workspace_fs.py  youtube_oauth.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_edit_planner.py  test_edit_renderer.py  test_edit_review.py  test_editing_api.py  test_editing_models.py  test_local_dialogs.py  test_media_api.py  test_migrations.py  test_mpv_session.py  test_publish_schedule.py  test_publish_youtube.py  test_render.py  test_services.py  test_shorts_pipeline.py  test_storage_profiles.py  test_studio.py  test_web_files_frontend.py  test_web_integrations_frontend.py  test_web_integrations_route_contracts.py  test_web_publish.py  test_web_route_contracts.py  test_web_storage_profile_route_contracts.py  test_web_storage_profiles_frontend.py  test_web_tag_route_contracts.py  test_web_tags_frontend.py  test_windows_installer.py  test_workspace_api.py  test_workspace_fs.py
(+129 files in other folders)
